Force-close modals when the route changes in the editor (prevents them from getting 'stuck').

--- a/views/shared/css/stylus/editor/record.styl
+++ b/views/shared/css/stylus/editor/record.styl
@@ -56,10 +56,9 @@ form.record
     textarea.code
       font-family Consolas
       font-size 11px
+
     textarea[name="coverage"]
       height 80px
-    textarea[name="svg"]
-      height 200px
 
   #record-style
     margin-bottom 1.4em
